# calypso_drivers

./: .gitignore  .gitmodules  README.md  imageTest.py  ina219_test.py  main.bash  propeller_controller.bash  propeller_teleop.bash  test.py  wind_direction_test.py  wind_vel.py  xsens.bash
bashes/: check_lowrance.bash  cpu_monitor.bash  ffplay.bash  flir.bash  image_converter.bash  lowrance.bash  thermal.bash  velodyne.bash
microphoneArrayDriver/: testing.py
propellerDriver/: README.md  proppeler_calmer.py  test.py
src/: README.md
src/ROS2_CPU_Monitor/: CMakeLists.txt  package.xml
src/ROS2_CPU_Monitor/launch/: monitor.launch.py
src/ROS2_CPU_Monitor/msg/: Memory.msg
src/ROS2_CPU_Monitor/scripts/: publisher.py
src/camera_publisher_pkg/: package.xml  setup.cfg  setup.py
src/camera_publisher_pkg/camera_publisher_pkg/: camera_publisher.py
src/flow_sensor/: package.xml  setup.cfg  setup.py
src/image_converter_pkg/: package.xml  setup.cfg  setup.py
src/ina219_publisher/: package.xml  setup.cfg  setup.py
src/launch_controller/: README.md  package.xml  setup.cfg  setup.py
src/lowrance_driver/: package.xml  setup.cfg  setup.py
src/lowrance_publisher_pkg/: package.xml  setup.cfg  setup.py
src/my_audio_node/: package.xml  setup.cfg  setup.py
src/propeller_controller/: package.xml  setup.cfg  setup.py
src/propeller_driver/: package.xml  setup.cfg  setup.py
src/propeller_teleop/: package.xml  setup.cfg  setup.py
src/rowlance_driver/: package.xml  setup.cfg  setup.py
src/wind_direction_sensor_publisher/: package.xml  setup.cfg  setup.py
(+31 files in other folders)
