<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cpu_monitor</name> <version>0.0.0</version>
  <description>A simple package to monitor CPU and memory usage.</description>
  <maintainer email="user@example.com">Your Name</maintainer> <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_parsers</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <depend>rclpy</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <exec_depend>python3-psutil</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>